feat: update dependencies, refactor database and storage setup, and implement authentication store

--- a/stackoverflow-appwrite/tsconfig.json
+++ b/stackoverflow-appwrite/tsconfig.json
@@ -19,7 +19,9 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"] ,
+      "appwrite": ["./node_modules/appwrite/types/index.d.ts"]
+
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
