--- a/stackoverflow-appwrite/package.json
+++ b/stackoverflow-appwrite/package.json
@@ -9,11 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "appwrite": "^20.1.0",
+    "appwrite": "^11.0.0",
+    "immer": "^10.1.3",
     "next": "15.5.4",
     "node-appwrite": "^13.0.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
