--- a/stackoverflow-appwrite/package.json
+++ b/stackoverflow-appwrite/package.json
@@ -9,12 +9,23 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "appwrite": "^11.0.0",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tabler/icons-react": "^3.35.0",
+    "appwrite-client": "npm:appwrite@^21.2.1",
+    "appwrite-server": "npm:node-appwrite@^20.2.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "immer": "^10.1.3",
+    "lucide-react": "^0.545.0",
+    "motion": "^12.23.22",
     "next": "15.5.4",
-    "node-appwrite": "^13.0.0",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "sonner": "^2.0.7",
+    "tabler-icons-react": "^1.56.0",
+    "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
@@ -26,6 +37,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
